<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <ScrollView 
       android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
       >
    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	        >
	    
		    <TextView 
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="文字大小:"
		    	android:layout_marginLeft="10dp"
		    	android:textSize="18dp"
		    	android:layout_marginTop="10dp"
		        />
		    
		     <SeekBar
		        android:id="@+id/seekBar1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dp"
		        android:max="40"
		        android:progress="20"
		         />
		     
		     <TextView android:id="@+id/text_preview"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="文字預覽:小說王"
		    	android:layout_marginLeft="10dp"
		    	android:textSize="20px"
		    	android:textColor="#FFF700"
		    	android:background="#000000"
		        />
		    
		    <LinearLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="1dp"
		        android:background="#A3A3A3"
		        android:layout_margin="10dp"
		        >      
		    </LinearLayout>
		    
		    <TextView 
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/setting_select_lan"
		    	android:layout_marginLeft="10dp"
		    	android:textSize="18dp"
		    	android:layout_marginTop="10dp"
		    	android:layout_marginBottom="10dp"
		        />
		    
		    <RadioGroup
			    android:id="@+id/RadioGroup_lan"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:layout_marginLeft="10dp"
			    >
			    <!--第一個RadioButton -->
			    <RadioButton
			      android:id="@+id/myRadioButton1"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:text="@string/setting_lan_tra"
			      android:checked="true"
			    />
			    <!--第二個RadioButton -->
			    <RadioButton
			      android:id="@+id/myRadioButton2"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:text="@string/setting_lan_sim"
			    />
			</RadioGroup>
			
		    <LinearLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="1dp"
		        android:background="#A3A3A3"
		        android:layout_margin="10dp"
		        >      
		    </LinearLayout>
		    
		    <TextView 
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/setting_select_direction"
		    	android:layout_marginLeft="10dp"
		    	android:textSize="18dp"
		    	android:layout_marginTop="10dp"
		    	android:layout_marginBottom="10dp"
		        />
		    
		    <RadioGroup
			    android:id="@+id/RadioGroup_reading_direction"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:layout_marginLeft="10dp"
			    >
			    <!--第一個RadioButton -->
			    <RadioButton
			      android:id="@+id/myRadioButton_reading_direction"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:text="@string/setting_direction_portrait"
			      android:checked="true"
			    />
			    <!--第二個RadioButton -->
			    <RadioButton
			      android:id="@+id/myRadioButton2_reading_direction"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:text="@string/setting_direction_horizontal"
			    />
			</RadioGroup>
			
		    <LinearLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="1dp"
		        android:background="#A3A3A3"
		        android:layout_margin="10dp"
		        >      
		    </LinearLayout>
		    
		    <TextView 
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/setting_select_tap"
		    	android:layout_marginLeft="10dp"
		    	android:textSize="18dp"
		    	android:layout_marginTop="10dp"
		    	android:layout_marginBottom="10dp"
		        />
		    
		    <RadioGroup
			    android:id="@+id/RadioGroup_tap"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:layout_marginLeft="10dp"
			    >
			    <!--第一個RadioButton -->
			    <RadioButton
			      android:id="@+id/myRadioButton_reading_direction"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:text="@string/setting_tap_open"	      
			    />
			    <!--第二個RadioButton -->
			    <RadioButton
			      android:id="@+id/myRadioButton2_reading_direction"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:text="@string/setting_tap_close"
			      android:checked="true"
			    />
			</RadioGroup>
			
		    <LinearLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="1dp"
		        android:background="#A3A3A3"
		        android:layout_margin="10dp"
		        >      
		    </LinearLayout>
		    
		    <TextView 
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/setting_select_sleeping"
		    	android:layout_marginLeft="10dp"
		    	android:textSize="18dp"
		    	android:layout_marginTop="10dp"
		    	android:layout_marginBottom="10dp"
		        />
		    
		    <RadioGroup
			    android:id="@+id/RadioGroup_stop_sleep"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:layout_marginLeft="10dp"
			    >
			    <!--第一個RadioButton -->
			    <RadioButton
			      android:id="@+id/myRadioButton_reading_direction"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:text="@string/setting_sleeping_open"
			    />
			    <!--第二個RadioButton -->
			    <RadioButton
			      android:id="@+id/myRadioButton2_reading_direction"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:text="@string/setting_sleeping_close"
			      android:checked="true"
			    />
			</RadioGroup>
			
		    <LinearLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="1dp"
		        android:background="#A3A3A3"
		        android:layout_margin="10dp"
		        >      
		    </LinearLayout>
	    	
		    <TextView 
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/setting_select_text_background"
		    	android:layout_marginLeft="10dp"
		    	android:textSize="18dp"
		    	android:layout_marginTop="10dp"
		    	android:layout_marginBottom="10dp"
		        />
		    <LinearLayout 
		        android:layout_width="100dp"
		    	android:layout_height="60dp"
		    	android:background="#696969"
		    	android:layout_marginLeft="10dp"
		        >
			    <ImageView android:id="@+id/imageview_textbackground"
			       android:layout_width="fill_parent"
		    	   android:layout_height="fill_parent"
		           android:layout_margin="2dp"
		           android:background="#000000"
			        />    
		    </LinearLayout>
		    
		    <TextView 
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/setting_select_text_color"
		    	android:layout_marginLeft="10dp"
		    	android:textSize="18dp"
		    	android:layout_marginTop="10dp"
		    	android:layout_marginBottom="10dp"
		        />
		    <LinearLayout 
		        android:layout_width="100dp"
		    	android:layout_height="60dp"
		    	android:background="#696969"
		    	android:layout_marginLeft="10dp"
		    	android:layout_marginBottom="10dp"
		        >
			    <ImageView android:id="@+id/imageview_textcolor"
			       android:layout_width="fill_parent"
		    	   android:layout_height="fill_parent"
		           android:layout_margin="2dp"
		           android:background="#FFF700"
			        />    
		    </LinearLayout>
		    
	    </LinearLayout>
    </ScrollView>

</LinearLayout>