<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
 	 >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <LinearLayout android:id="@+id/my_bookcase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/my_novel_selector"
            android:clickable="true"
            android:layout_margin="10dp"
            android:padding="15dp"
            >
            <ImageView 
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/bookcase"            
                />     
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_bookcase"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/my_novel_selector"
            android:clickable="true"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:id="@+id/my_bookmarks"
            >
            <ImageView 
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/bookmark"
                />     
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_bookmark"
                />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/my_novel_selector"
            android:clickable="true"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:id="@+id/my_recent_read_bookmarks"
            >
            <ImageView 
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/chalender"
                />     
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_recent_reading"
                />
        </LinearLayout>
        <LinearLayout  android:id="@+id/my_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/my_novel_selector"
            android:clickable="true"
            android:layout_margin="10dp"
            android:padding="15dp"
            >
            <ImageView 
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/setting"
                />     
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_read_setting"
                />
        </LinearLayout>      
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <LinearLayout  android:id="@+id/classic_kongfu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/my_novel_selector"
            android:clickable="true"
            android:layout_margin="10dp"
            android:padding="15dp"
            >
            <ImageView 
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/action"
                />     
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_classic_action_novel"
                />
        </LinearLayout>
        <LinearLayout	android:id="@+id/classic_novel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/my_novel_selector"
            android:clickable="true"
            android:layout_margin="10dp"
            android:padding="15dp"
            >
            <ImageView 
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/classic"
                />     
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_classic_novel"
                />
        </LinearLayout>      
    </LinearLayout>
    
    <!-- <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        >
    </LinearLayout> -->

</LinearLayout>